--- a/contents/2024/滥用的令牌.md
+++ b/contents/2024/滥用的令牌.md
@@ -14,10 +14,7 @@ tags:
    是典型的值令牌, 在 JWT 认证中, 常见的做法是从令牌的 JSON 数据中取用户 ID 和各种权限相关信息比如权限列表,策略和角色,
    也就是说这些信息是存在令牌上的, 不查库. 问题就在这个不查库上, 库里策略对应的权限更新了是无法感知到的.
 
-上面两点是值令牌的缺陷, 或许你会想那无脑用引用令牌好了, 但其实有些场景下还得考虑一点: 这令牌不能放 Storage
-
-1. 服务器同时要提供文件下载能力, 前端请求将无法自动带上令牌, 那么便只能通过 js 请求到内存而后创建 a 标签下载了, 这显然是很头大的问题
-2. 前后端分离下其实我们已经不需要考虑页面的权限了, 但这两年 nodejs 生态下 SSR 又非常流行, 放在 Storage 的令牌又带不过去
+上面两点是值令牌的缺陷, 或许你会想那无脑用引用令牌好了, 但其实有些场景下还得考虑一点: 前后端分离下其实我们已经不需要考虑页面的权限了, 但这两年 nodejs 生态下 SSR 又非常流行, 放在 Storage 的令牌又带不过去
 
 说到底, 我觉得在令牌授权这方面, 已经是矫枉过正了, 在各种博客平台上时不时就会出现一篇初学者写的登录方案解析, 写着自己都似懂非懂的优势劣势,
 大量低素质的开发人员只听说过 JWT 和 Cookie, 却又不了解其中原理和应用场景, 以至于在实践中瞎用, 当然了, 这又和我有什么关系呢,
