--- a/contents/2024/表单仔完全攻略.md
+++ b/contents/2024/表单仔完全攻略.md
@@ -8,7 +8,7 @@ disable-math: false
 
 过去三年的工作中, 出了偶尔写一些小的全栈项目和傻逼套壳客户端, 其实大部分时间都是在写表单, 各种各样的表单. 记录下心得, 后面开始新的学习.
 
-#### 简单表单
+### 简单表单
 
 关于表单和表格的封装, 我个人是持支持态度的, 对于并不复杂的的表单, 使用类似 json 的配置能够减少代码量, 同时使代码中的 HTML
 部分更加简洁便于阅读, 但对于复杂的表单, 这种配置就会显得力不从心, 我们需要在适当的时候使不同的方式进行处理, 或者,
@@ -34,7 +34,7 @@ export type FieldOption<C = typeof ElInput> = FieldObjectOption<C> | (() => Fiel
 当然了, 眼尖的一眼就能看出这个配置的局限性, 如果我有个 Select 组件, 里面的选项咋传进去? 其实也简单, 我们知道函数组件的签名类似
 `(props, ctx) => VNode` , 那么你直接传入一个函数组件便是了, 当然了, 为了一些高级功能封装一个有状态的组件是更更好的选择.
 
-#### 表单布局不要他妈用配置
+### 表单布局不要他妈用配置
 
 我见过一个很奇妙的操作是表单布局居然用配置来解决, 先不说配置项搞得又臭又长, 处理配置项的逻辑也颇为复杂,
 本来表单可以提取配置的基础就是基本没有什么 UI 逻辑, 都是数据相关的逻辑, 这才又了一个简单的表单配置, 但布局一加入显然就出问题了, 如果 JS
@@ -42,7 +42,7 @@ export type FieldOption<C = typeof ElInput> = FieldObjectOption<C> | (() => Fiel
 
 其实, 以现代 CSS 的能力, 表单布局完全可以几条规则完事, HTML 与 CSS 分离是有道理的.
 
-#### 嵌套表单和动态表单
+### 嵌套表单和动态表单
 
 接手过不知道多少个屎山项目之后, 我明白了, 大多数开发团队都他妈草台班子, 后端研究他妈的高并发高可用结果结果接口都跑不通, 前端研究什么 fiber
 结果弹窗都弹歪了. 嵌套表单和动态表单的问题就是这样, 并不是有什么难度, 而是有些人瞎几把搞.
